--- a/src/sass/application.scss
+++ b/src/sass/application.scss
@@ -39,7 +39,7 @@
 @import "components/image-base64";
 @import "components/responsive";
 @import "components/print";
-@import "components/ifad_unicorn";
+@import "components/ifad-unicorn";
 
 
 //== Tweaks for plugins
