--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -32,7 +32,7 @@ $agile-board-customize:         true !default;
 //== Colors
 //
 
-$blue:                          #0065ff !default;
+$blue:                          #003870 !default; // This is IFAD blue
 $indigo:                        #4e65e5 !default;
 $purple:                        #614ba6 !default;
 $pink:                          #eb5286 !default;
@@ -78,7 +78,7 @@ $gray-800:                      shade($gray, 800) !default;
 $gray-900:                      shade($gray, 900) !default;
 $gray-950:                      shade($gray, 950) !default;
 
-$brand-primary:                 $purple !default;
+$brand-primary:                 $blue !default;
 $brand-text:                    $white !default;
 $brand-accent:                  shade($brand-primary, 100) !default;
 
