--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -57,8 +57,9 @@ textarea,
 
 h1 {
   margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 2em;
-  font-weight: $font-weight-semi-bold;
+  font-weight: 700;
   line-height: $line-height-large * .825;
 }
 
