introduce font-weight-heavy-bold for headings

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -137,6 +137,7 @@ $font-family-base:              $font-family-sans-serif !default;
 $font-weight-normal:            normal !default;
 $font-weight-semi-bold:         500 !default;
 $font-weight-bold:              600 !default;
+$font-weight-heavy-bold:        700 !default;
 
 $font-size-base:                14px !default;
 $font-size-large:               1.285em !default;
