--- a/src/sass/components/_top.scss
+++ b/src/sass/components/_top.scss
@@ -135,11 +135,11 @@
 
     .root {
       color: $header-root;
-      font-weight: $font-weight-semi-bold;
+      font-weight: $font-weight-heavy-bold;
     }
 
     .ancestor {
-      font-weight: $font-weight-semi-bold;
+      font-weight: $font-weight-heavy-bold;
     }
 
     .root,
